--- a/uat/Mobile/offline/index.html
+++ b/uat/Mobile/offline/index.html
@@ -19,7 +19,16 @@
 <body class="offline-layout offline-overflow">
   <header class="offline-header">
     <img class="offline-header__logo" src="./images/offline-logo.png" alt="微管家LOGO"></span>
-    <div class="float-right"><a class="offline-login" href="https://kf.wechatone.com/user/login/">登录</a><a class="offline-register" id="offlineRegister" href="./register.html?rt=9&come=1">免费注册</a></div>
+    <div class="float-right">
+      <div class="dropdown-box">
+          <div class="dropdown-btn">登录<span class="caret"></span></div>
+          <div class="dropdown-content">
+              <a href="https://kf.wechatone.com/user/login/">服务器1登录</a>
+              <a href="https://kf2.wechatone.com/user/login/">服务器2登录</a>
+          </div>
+      </div>
+      <a class="offline-register" id="offlineRegister" href="./register.html?rt=9&come=1">免费注册</a>
+    </div>
   </header>
   <div class="offline-layout__content">
     <div class="offline-banner swiper-container">
@@ -217,5 +226,16 @@
     jointUrl("#offlineRegister","href");
     jointUrl("#offlineRegisterBanner","href");
     $("#offlineFooterCopy").text(window.location.hostname);
+
+    // 下拉按钮
+    $(".dropdown-btn").on("click", function () {
+          $(this).siblings(".dropdown-content").toggleClass("show");
+      });
+
+      $(window).on("click", function (e) {
+          if (!$(e.target).hasClass("dropdown-btn") && !$(e.target).hasClass("caret")) {
+              $(".dropdown-content").removeClass("show");
+          }
+      });
   </script>
 </html>
