--- a/uat/index.html
+++ b/uat/index.html
@@ -35,8 +35,20 @@
             </li>
             <li>
               <div class="btn-box">
-                <a class="service" href="https://kf.wechatone.com/user/login/">客服登录</a>
-                <a class="administer" style="padding: 0 5px;" href="https://kf.wechatone.com/admin/#/login">管理登录</a>
+                <div class="dropdown-box">
+                  <button class="dropdown-btn">客服登录<span class="caret"></span></button>
+                  <div class="dropdown-content">
+                    <a href="https://kf.wechatone.com/user/login/">服务器1登录</a>
+                    <a href="https://kf2.wechatone.com/user/login/">服务器2登录</a>
+                  </div>
+                </div>
+                <div class="dropdown-box">
+                  <button class="dropdown-btn">管理登录<span class="caret"></span></button>
+                  <div class="dropdown-content">
+                    <a href="https://kf.wechatone.com/admin/#/login">服务器1登录</a>
+                    <a href="https://kf2.wechatone.com/admin/#/login">服务器2登录</a>
+                  </div>
+                </div>
                 <a class="register" href="./register.html?rt=8">免费注册</a>
               </div>
             </li>
@@ -64,8 +76,20 @@
             </li>
             <li>
               <div class="btn-box">
-                <a class="service" href="https://kf.wechatone.com/user/login/">客服登录</a>
-                <a class="administer" style="padding: 0 5px;" href="https://kf.wechatone.com/admin/#/login">管理登录</a>
+                  <div class="dropdown-box">
+                    <button class="dropdown-btn">客服登录<span class="caret"></span></button>
+                    <div class="dropdown-content">
+                      <a href="https://kf.wechatone.com/user/login/">服务器1登录</a>
+                      <a href="https://kf2.wechatone.com/user/login/">服务器2登录</a>
+                    </div>
+                  </div>
+                  <div class="dropdown-box">
+                    <button class="dropdown-btn">管理登录<span class="caret"></span></button>
+                    <div class="dropdown-content">
+                      <a href="https://kf.wechatone.com/admin/#/login">服务器1登录</a>
+                      <a href="https://kf2.wechatone.com/admin/#/login">服务器2登录</a>
+                    </div>
+                  </div>
                 <a class="register" href="./register.html?rt=9">免费注册</a>
               </div>
             </li>
