微管家和推广区分登录
微管家和推广区分登录

--- a/uat/Mobile/offline/index.html
+++ b/uat/Mobile/offline/index.html
@@ -20,13 +20,14 @@
   <header class="offline-header">
     <img class="offline-header__logo" src="./images/offline-logo.png" alt="微管家LOGO"></span>
     <div class="float-right">
-      <div class="dropdown-box">
+      <div class="dropdown-box is-wechatone">
           <div class="dropdown-btn">登录<span class="caret"></span></div>
           <div class="dropdown-content">
               <a href="https://kf.wechatone.com/user/login/">服务器1登录</a>
               <a href="https://kf2.wechatone.com/user/login/">服务器2登录</a>
           </div>
       </div>
+      <a class="offline-login not-wechatone" href="https://kf.wechatone.com/user/login/">登录</a>
       <a class="offline-register" id="offlineRegister" href="./register.html?rt=9&come=1">免费注册</a>
     </div>
   </header>
@@ -237,5 +238,25 @@
               $(".dropdown-content").removeClass("show");
           }
       });
+
+      //配置域名和需要显示的板块  
+      var config = [
+        {
+          "host": "customerservice.uat.aiagain.com",
+          "wechatone": true
+        },
+        {
+          "host": "offlineservice.uat.aiagain.com",
+          "wechatone": true
+        }
+      ];
+      for(var i=0;i<config.length;i++){
+        if(window.location.host.indexOf(config[i].host) > -1){
+          if(config[i].wechatone==true){
+            $(".is-wechatone").css("display","inline-block");
+            $(".not-wechatone").hide();
+          }
+        }
+      };
   </script>
 </html>
