--- a/uat/register.html
+++ b/uat/register.html
@@ -36,20 +36,22 @@
             </li>
             <li>
               <div class="btn-box">
-                  <div class="dropdown-box">
-                    <button class="dropdown-btn">客服登录<span class="caret"></span></button>
-                    <div class="dropdown-content">
-                      <a href="https://kf.wechatone.com/user/login/">服务器1登录</a>
-                      <a href="https://kf2.wechatone.com/user/login/">服务器2登录</a>
-                    </div>
+                <div class="dropdown-box is-wechatone">
+                  <button class="dropdown-btn">客服登录<span class="caret"></span></button>
+                  <div class="dropdown-content">
+                    <a href="https://kf.wechatone.com/user/login/">服务器1登录</a>
+                    <a href="https://kf2.wechatone.com/user/login/">服务器2登录</a>
                   </div>
-                  <div class="dropdown-box">
-                    <button class="dropdown-btn">管理登录<span class="caret"></span></button>
-                    <div class="dropdown-content">
-                      <a href="https://kf.wechatone.com/admin/#/login">服务器1登录</a>
-                      <a href="https://kf2.wechatone.com/admin/#/login">服务器2登录</a>
-                    </div>
+                </div>
+                <div class="dropdown-box is-wechatone">
+                  <button class="dropdown-btn">管理登录<span class="caret"></span></button>
+                  <div class="dropdown-content">
+                    <a href="https://kf.wechatone.com/admin/#/login">服务器1登录</a>
+                    <a href="https://kf2.wechatone.com/admin/#/login">服务器2登录</a>
                   </div>
+                </div>
+                <a class="service not-wechatone" href="https://kf.wechatone.com/user/login/">客服登录</a>
+                <a class="administer not-wechatone" style="padding: 0 5px;" href="https://kf.wechatone.com/admin/#/login">管理登录</a>
                 <a class="register" href="javascript:;">免费注册</a>
               </div>
             </li>
@@ -77,20 +79,22 @@
             </li>
             <li>
               <div class="btn-box">
-                  <div class="dropdown-box">
-                    <button class="dropdown-btn">客服登录<span class="caret"></span></button>
-                    <div class="dropdown-content">
-                      <a href="https://kf.wechatone.com/user/login/">服务器1登录</a>
-                      <a href="https://kf2.wechatone.com/user/login/">服务器2登录</a>
-                    </div>
+                <div class="dropdown-box is-wechatone">
+                  <button class="dropdown-btn">客服登录<span class="caret"></span></button>
+                  <div class="dropdown-content">
+                    <a href="https://kf.wechatone.com/user/login/">服务器1登录</a>
+                    <a href="https://kf2.wechatone.com/user/login/">服务器2登录</a>
                   </div>
-                  <div class="dropdown-box">
-                    <button class="dropdown-btn">管理登录<span class="caret"></span></button>
-                    <div class="dropdown-content">
-                      <a href="https://kf.wechatone.com/admin/#/login">服务器1登录</a>
-                      <a href="https://kf2.wechatone.com/admin/#/login">服务器2登录</a>
-                    </div>
+                </div>
+                <div class="dropdown-box is-wechatone">
+                  <button class="dropdown-btn">管理登录<span class="caret"></span></button>
+                  <div class="dropdown-content">
+                    <a href="https://kf.wechatone.com/admin/#/login">服务器1登录</a>
+                    <a href="https://kf2.wechatone.com/admin/#/login">服务器2登录</a>
                   </div>
+                </div>
+                <a class="service not-wechatone" href="https://kf.wechatone.com/user/login/">客服登录</a>
+                <a class="administer not-wechatone" style="padding: 0 5px;" href="https://kf.wechatone.com/admin/#/login">管理登录</a>
                 <a class="register" href="javascript:;">免费注册</a>
               </div>
             </li>
