--- a/uat/agreement.html
+++ b/uat/agreement.html
@@ -50,8 +50,8 @@
                             <a href="https://kf2.wechatone.com/admin/#/login">服务器2登录</a>
                         </div>
                     </div>
-                    <a class="service not-wechatone" href="https://kf.wechatone.com/user/login/">客服登录</a>
-                    <a class="administer not-wechatone" style="padding: 0 5px;" href="https://kf.wechatone.com/admin/#/login">管理登录</a>
+                    <a class="service not-wechatone block--del" href="https://kf.wechatone.com/user/login/">客服登录</a>
+                    <a class="administer not-wechatone block--del" style="padding: 0 5px;" href="https://kf.wechatone.com/admin/#/login">管理登录</a>
                     <a class="register" href="javascript:;">免费注册</a>
                 </div>
               </li>
@@ -93,8 +93,8 @@
                             <a href="https://kf2.wechatone.com/admin/#/login">服务器2登录</a>
                         </div>
                     </div>
-                    <a class="service not-wechatone" href="https://kf.wechatone.com/user/login/">客服登录</a>
-                    <a class="administer not-wechatone" style="padding: 0 5px;" href="https://kf.wechatone.com/admin/#/login">管理登录</a>
+                    <a class="service not-wechatone block--del" href="https://kf.wechatone.com/user/login/">客服登录</a>
+                    <a class="administer not-wechatone block--del" style="padding: 0 5px;" href="https://kf.wechatone.com/admin/#/login">管理登录</a>
                     <a class="register" href="javascript:;">免费注册</a>
                 </div>
               </li>
