--- a/production/index.html
+++ b/production/index.html
@@ -52,8 +52,8 @@
                                         <a href="https://kf2.wechatone.com/admin/#/login">服务器2登录</a>
                                     </div>
                                 </div>
-                                <a class="service not-wechatone block--del" href="https://kf.wechatone.com/user/login/">客服登录</a>
-                                <a class="administer not-wechatone block--del" style="padding: 0 5px;" href="https://kf.wechatone.com/admin/#/login">管理登录</a>
+                                <a class="service not-wechatone del--login" href="https://kf.wechatone.com/user/login/">客服登录</a>
+                                <a class="administer not-wechatone del--login" style="padding: 0 5px;" href="https://kf.wechatone.com/admin/#/login">管理登录</a>
                                 <a class="register" href="./register.html?rt=8">免费注册</a>
                             </div>
                         </li>
@@ -95,8 +95,8 @@
                                         <a href="https://kf2.wechatone.com/admin/#/login">服务器2登录</a>
                                     </div>
                                 </div>
-                                <a class="service not-wechatone block--del" href="https://kf.wechatone.com/user/login/">客服登录</a>
-                                <a class="administer not-wechatone block--del" style="padding: 0 5px;" href="https://kf.wechatone.com/admin/#/login">管理登录</a>
+                                <a class="service not-wechatone del--login" href="https://kf.wechatone.com/user/login/">客服登录</a>
+                                <a class="administer not-wechatone del--login" style="padding: 0 5px;" href="https://kf.wechatone.com/admin/#/login">管理登录</a>
                                 <a class="register" href="./register.html?rt=9">免费注册</a>
                             </div>
                         </li>
@@ -564,7 +564,7 @@
                         <li class="gather-item">
                             <div class="gather-item__icon"><i class="icon icon-marketing"></i></div>
                             <h5 class="gather-item__title">朋友圈营销管家</h5>
-                            <p class="gather-item__des">智能发送朋友圈，自动点赞好友，营销内容指定统一发送，触达更有效，宣传渠道更广</p>
+                            <p class="gather-item__des"><span class="del--message">智能发送朋友圈，自动点赞好友，</span>营销内容指定统一发送，触达更有效，宣传渠道更广</p>
                         </li>
                     </ul>
                 </div>
