微管家线上线下版推广域名文案调整
微管家线上线下版推广域名文案调整

--- a/production/index.html
+++ b/production/index.html
@@ -112,16 +112,7 @@
                             <div class="swiper-info">
                                 <p class="swiper-info_title">集购物数据、客服、社群营销为一体
                                     <br/>的个人号解决方案</p>
-                                <p class="swiper-info_des">加粉、粉丝裂变、个人号营销、客服、绩效管理</p>
-                                <a class="register advisory" href="./register.html?rt=8">免费注册</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide banner2">
-                        <div class="layer-wrap">
-                            <div class="swiper-info">
-                                <p class="swiper-info_title">微信电商，就用微管家</p>
-                                <p class="swiper-info_des">一人轻松维护多个微信号，玩转微信群及朋友圈营销</p>
+                                <p class="swiper-info_des">粉丝沉淀、个人号营销、客服、绩效管理</p>
                                 <a class="register advisory" href="./register.html?rt=8">免费注册</a>
                             </div>
                         </div>
@@ -156,7 +147,7 @@
                     <ul class="clearfix wgjia-c_wrap__ul">
                         <li>
                             <i class="icon icon-shield"></i>
-                            <p class="font-black">防封号风控</p>
+                            <p class="font-black">防封号</p>
                         </li>
                         <li>
                             <i class="icon icon-network-data"></i>
@@ -168,7 +159,7 @@
                         </li>
                         <li>
                             <i class="icon icon-vermicelli"></i>
-                            <p class="font-black">加粉神器</p>
+                            <p class="font-black">会员沉淀</p>
                         </li>
                         <li>
                             <i class="icon icon-customer"></i>
@@ -200,8 +191,8 @@
             <div class="layout-layer wgjia-generalize">
                 <div class="layer-wrap wgjia-generalize_wrap">
                     <div class="fr wgjia-info">
-                        <h5 class="level-title">朋友圈智能营销推送</h5>
-                        <p class="wgjia-info__ul">完整的朋友圈营销方案智能推送：朋友圈推送、点赞、自动加好友等，帮助商家的品牌微信号形象更加活跃，大幅度提升真实性，有效避免封号。</p>
+                        <h5 class="level-title">朋友圈营销管家</h5>
+                        <p class="wgjia-info__ul">完整的朋友圈营销解决方案，自定义内容推送、互动评论，提高商家品牌在朋友圈曝光度和活跃度，大幅度提升真实性，培育会员对品牌认可和忠诚度。</p>
                     </div>
                     <img src="./images/generalize.png">
                 </div>
@@ -212,7 +203,7 @@
                     <div class="fl wgjia-info">
                         <h5 class="level-title">数据化管理</h5>
                         <ul class="wgjia-info__ul">
-                            <li>打通并同步店铺数据，每个子账号对接的客户及其购买订单可视化！复购数据可作为客服绩效考；</li>
+                            <li>打通并同步店铺数据，每个子账号对接的客户及其购买订单可视化！复购数据可作为客服绩效考核；</li>
                             <li>详情的日常运营管理数据，粉丝增量、活跃情况等，为微信号的营销方案制定提供精准有力参考依据；</li>
                             <li>性别、地区、增长、敏感操作、粉丝分配等多维度数据统计，可根据用户需求增加定制数据表单。</li>
                         </ul>
@@ -228,7 +219,7 @@
                         <h5 class="level-title">自动化快捷回复</h5>
                         <ul class="wgjia-info__ul">
                             <li>私有和公共快捷语设置，让每个客服的回复语更具个性化、灵活化；</li>
-                            <li>自动通过好友添加请求，接收消息后，可以模拟人工自动回复消息；提高客户体验。</li>
+                            <li>智能沉淀会员为微信好友，快捷短语回复设置，提高客户体验和满意度。</li>
                         </ul>
                     </div>
                 </div>
@@ -239,8 +230,8 @@
                     <div class="fl wgjia-info">
                         <h5 class="level-title">微信手机安全风控</h5>
                         <ul class="wgjia-info__ul">
-                            <li>有效避免员工误操作或过度操作造成的封号危险；</li>
-                            <li>工作手机设备状态查询，防止员工消极怠工，有效预警降低有损公司的行为。</li>
+                            <li>敏感词预警，有效避免不当操作；</li>
+                            <li>工作手机设备查询，方便查看员工工作状态，有效预警降低有损公司的行为。</li>
                         </ul>
                     </div>
                     <img src="./images/safety.png">
@@ -257,8 +248,8 @@
                         </li>
                         <li class="anim stick">
                             <i class="icon icon-friend"></i>
-                            <p class="features-list__title">自动加粉通过好友</p>
-                            <p class="features-list__text">自动添加粉丝、自动通过好友</p>
+                            <p class="features-list__title">会员沉淀</p>
+                            <p class="features-list__text">将买家沉淀到微信，打造私域流量池</p>
                         </li>
                         <li class="anim stick">
                             <i class="icon icon-tag"></i>
@@ -267,8 +258,8 @@
                         </li>
                         <li class="anim stick">
                             <i class="icon icon-marketing"></i>
-                            <p class="features-list__title">朋友圈智能营销</p>
-                            <p class="features-list__text">智能朋友圈推送，提高朋友圈运营效率</p>
+                            <p class="features-list__title">朋友圈营销</p>
+                            <p class="features-list__text">完整的朋友圈营销解决方案，提高运营效率</p>
                         </li>
                         <li class="anim stick">
                             <i class="icon icon-reply"></i>
@@ -277,8 +268,8 @@
                         </li>
                         <li class="anim stick">
                             <i class="icon icon-redpacket"></i>
-                            <p class="features-list__title">红包发放</p>
-                            <p class="features-list__text">子账号的红包发放，处理棘手客户问题流程更加简单化，提升客户体验</p>
+                            <p class="features-list__title">精准推送</p>
+                            <p class="features-list__text">根据订单RFM模型筛选粉丝，标签化管理，精准推送营销信息</p>
                         </li>
                         <li class="anim stick">
                             <i class="icon icon-portrayal"></i>
@@ -292,13 +283,13 @@
                         </li>
                         <li class="anim stick">
                             <i class="icon icon-code"></i>
-                            <p class="features-list__title">微活码</p>
-                            <p class="features-list__text">活码不变，可自动切换个人号，自动分配粉丝到不同个人号，实现分流</p>
+                            <p class="features-list__title">黑科技</p>
+                            <p class="features-list__text">二维码不变，会员沉淀可随机分配到不同账号，实现良好分流</p>
                         </li>
                         <li class="anim stick">
                             <i class="icon icon-bask"></i>
                             <p class="features-list__title">互动游戏</p>
-                            <p class="features-list__text">微管家有一个全新的互动游戏加粉模式来帮助商家解决加粉方面的问题</p>
+                            <p class="features-list__text">微管家全新互动游戏，多元化助力粉丝活跃，提高营销效率</p>
                         </li>
                     </ul>
                 </div>
@@ -395,7 +386,7 @@
                     <div class="swiper-slide retail-banner__one retail-banner__one--bg">
                         <div class="layer-wrap">
                             <h3 class="title">防泄露，防删除，防丢失，<br/>有一种安全叫做“微管家”</h3>
-                            <p class="des">隐藏客户信息，保存商务数据，追溯恶意行为</p>
+                            <p class="des">保护客户信息，保存商务数据，追溯恶意行为</p>
                             <a class="register" href="./register.html?rt=9">免费注册</a>
                         </div>
                     </div>
@@ -454,8 +445,8 @@
                     <h3 class="worried__title">微管家企业管理软件</h3>
                     <p class="worried__des">一切尽在掌握，远离喧嚣，安心去旅行</p>
                     <div class="worried__list">
-                        <div class="list__clause list__clause--one"><span class="clause--one__left">配备专属工作手机</span><span class="clause--one__right">手机由企业统一设置</span></div>
-                        <div class="list__clause list__clause--two"><span class="clause--two__left">员工微信统一管理</span><span class="clause--two__right">防止员工消极怠工</span></div>
+                        <div class="list__clause list__clause--one"><span class="clause--one__left">配备专属工作手机</span><span class="clause--one__right">集中管理多个微信</span></div>
+                        <div class="list__clause list__clause--two"><span class="clause--two__left">方便员工绩效考核</span><span class="clause--two__right">防止员工消极工作</span></div>
                         <div class="list__clause list__clause--three"><span class="clause--three__left">防止飞单、撞单</span><span class="clause--three__right">提升客户转化率</span></div>
                         <div class="list__clause list__clause--four"><span class="clause--four__left">提高与客户沟通效率</span><span class="clause--four__right">保护客户个人信息</span></div>
                         <div class="list__clause list__clause--five"><span class="clause--five__left">工作手机操作管理</span><span class="clause--five__right">防止客户资源流失</span></div>
@@ -477,8 +468,8 @@
                             <div class="benefit-info__icon">
                                 <i class="icon icon-friend-verdancy"></i>
                             </div>
-                            <h5 class="benefit-info__title">自动加粉通过好友</h5>
-                            <p class="benefit-info__des">自动添加粉丝，通过好友设置回复，第一时间触达客户，提高好感度</p>
+                            <h5 class="benefit-info__title">用户沉淀为私域流量</h5>
+                            <p class="benefit-info__des">客户沉淀为微信客户，低成本快速扩大私域用户池</p>
                         </li>
                         <li class="benefit-info">
                             <div class="benefit-info__icon">
@@ -498,8 +489,8 @@
                             <div class="benefit-info__icon">
                                 <i class="icon icon-redpacket-verdancy"></i>
                             </div>
-                            <h5 class="benefit-info__title">红包发放</h5>
-                            <p class="benefit-info__des">子账号的红包发放，处理棘手客户问题流程更加简单化，提升客户体验</p>
+                            <h5 class="benefit-info__title">精准推送</h5>
+                            <p class="benefit-info__des">根据订单RFM模型筛选粉丝，标签化管理，精准推送营销信息</p>
                         </li>
                         <li class="benefit-info">
                             <div class="benefit-info__icon">
@@ -533,11 +524,11 @@
                         </li>
                         <li class="category-info">
                             <div class="category-info__title category-info__title--bg5">情感咨询</div>
-                            <p class="category-info__des">咨询用户聚合管理，智能打标签，客服转接无障碍沟通，朋友圈自动点赞，加深客户信任度。</p>
+                            <p class="category-info__des">咨询用户聚合管理，智能打标签，客服转接无障碍沟通，朋友圈互动，加深客户信任度。</p>
                         </li>
                         <li class="category-info ">
                             <div class="category-info__title category-info__title--bg6">微营销企业</div>
-                            <p class="category-info__des">集中管理旗下分销微信，自动加粉，智能分配到各个微信。朋友圈发送/点赞。一台手机，等于同时运营50个微商。</p>
+                            <p class="category-info__des">沉淀客户到微信，随机分配到各个微信，一个管理者可管理旗下50个微信账号。</p>
                         </li>
                     </ul>
                 </div>
@@ -558,13 +549,13 @@
                         </li>
                         <li class="gather-item">
                             <div class="gather-item__icon"><i class="icon icon-code"></i></div>
-                            <h5 class="gather-item__title">微活码</h5>
-                            <p class="gather-item__des">活码不变，可自动切换个人号，自动分配粉丝到不同个人号，实现分流</p>
+                            <h5 class="gather-item__title">黑科技</h5>
+                            <p class="gather-item__des">二维码不变，会员沉淀可随机分配到不同账号，实现良好分流</p>
                         </li>
                         <li class="gather-item">
                             <div class="gather-item__icon"><i class="icon icon-marketing"></i></div>
                             <h5 class="gather-item__title">朋友圈营销管家</h5>
-                            <p class="gather-item__des"><span class="del--message">智能发送朋友圈，自动点赞好友，</span>营销内容指定统一发送，触达更有效，宣传渠道更广</p>
+                            <p class="gather-item__des">智能朋友圈互动，内容多账号同时发送，点赞评论一站式管理，触达更有效，宣传渠道更广</p>
                         </li>
                     </ul>
                 </div>
@@ -587,7 +578,7 @@
         </div>
         <div class="layout-layer retail-footer">
             <div class="retail-footer__contact">
-                <p class="main-company" id="mainCompany">微管家是广州市喵鲜贸易有限公司旗下的一款产品</p>
+                <p class="main-company del--maincompany">微管家是广州市喵鲜贸易有限公司旗下的一款产品</p>
                 <p>了解更多产品,请拨打：400-8320-166 邮箱：info@aiagain.com</p>
             </div>
         </div>
