--- a/production/register.html
+++ b/production/register.html
@@ -50,8 +50,8 @@
                     <a href="https://kf2.wechatone.com/admin/#/login">服务器2登录</a>
                   </div>
                 </div>
-                <a class="service not-wechatone block--del" href="https://kf.wechatone.com/user/login/">客服登录</a>
-                <a class="administer not-wechatone block--del" style="padding: 0 5px;" href="https://kf.wechatone.com/admin/#/login">管理登录</a>
+                <a class="service not-wechatone del--login" href="https://kf.wechatone.com/user/login/">客服登录</a>
+                <a class="administer not-wechatone del--login" style="padding: 0 5px;" href="https://kf.wechatone.com/admin/#/login">管理登录</a>
                 <a class="register" href="javascript:;">免费注册</a>
               </div>
             </li>
@@ -93,8 +93,8 @@
                     <a href="https://kf2.wechatone.com/admin/#/login">服务器2登录</a>
                   </div>
                 </div>
-                <a class="service not-wechatone block--del" href="https://kf.wechatone.com/user/login/">客服登录</a>
-                <a class="administer not-wechatone block--del" style="padding: 0 5px;" href="https://kf.wechatone.com/admin/#/login">管理登录</a>
+                <a class="service not-wechatone del--login" href="https://kf.wechatone.com/user/login/">客服登录</a>
+                <a class="administer not-wechatone del--login" style="padding: 0 5px;" href="https://kf.wechatone.com/admin/#/login">管理登录</a>
                 <a class="register" href="javascript:;">免费注册</a>
               </div>
             </li>
@@ -109,7 +109,7 @@
     </div>
     <div class="layout-layer retail-footer">
       <div class="retail-footer__contact">
-        <p class="main-company" id="mainCompany">微管家是广州市喵鲜贸易有限公司旗下的一款产品</p>
+        <p class="main-company del--maincompany">微管家是广州市喵鲜贸易有限公司旗下的一款产品</p>
         <p>了解更多产品,请拨打：400-8320-166    邮箱：info@aiagain.com</p>
       </div>
     </div>
