推广页底部加上公司简介以及联系方式、地址
推广页底部加上公司简介以及联系方式、地址

--- a/production/index.html
+++ b/production/index.html
@@ -576,13 +576,55 @@
                 <img class="logo-blcok" src="./images/logoGather.jpg">
             </div>
         </div>
-        <div class="layout-layer retail-footer">
+
+        <!-- about begin -->
+        <div class="layout-layer layout d-none add--about">
+            <div class="about" id="aboutId">
+                <div class="layer-container about-contanier layer-wrap">
+                    <i class="about-z-index-1"></i>
+                    <div class="about-z-index-2 micro-star" id="microStar">
+                        <p class="about-title d-none add--xingwei">关于星微</p>
+                        <p class="about-title d-none add--miaoxian">关于喵鲜</p>
+                        <p class="about-info d-none add--xingwei">广州星微网络科技有限公司是国内一家实现全网电商平台与微信号进行数据打通的社群电商平台。微管家是星微网络科技旗下的一款产品。</p>
+                        <p class="about-info d-none add--miaoxian">广州市喵鲜贸易有限公司是国内一家实现全网电商平台与微信号进行数据打通的社群电商平台。微管家是喵鲜贸易旗下的一款产品。</p>
+                        <p class="about-info">我们的核心是：帮助电商商家借助微信与电商平台生意紧密结合，实现低成本、系统化社群管理，提高平台店铺的销售额和复购率。<br />我们的使命是：为企业打造创新的移动社群生态体系！</p>
+                        <p class="about-info">通过将各电商平台会员打通，将平台的会员引入微信并转化成商家的会员，建立商家的微信粉丝社群和粉丝系统化识别，实现大数据分析和精准营销。</p>
+                        <!-- <a href="javascript:;" class="details ">查看详情</a> -->
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- about end -->
+
+        <!-- footer -->
+        <div class="layout d-none add--footer">
+            <div class="footer-layout" id="footerId">
+            <div class="layer-container footer-container footer-container--sx clearfix">
+                <i class="icon icon-robot float-left"></i>
+                <div class="site float-left" style="width: 722px;height: 179px;">
+                <p class="lable-title pt-0">联系我们</p>
+                <ul class="float-left" style="padding-right: 8px;">
+                    <li class="lable-title">客服咨询热线：400-832-0166</li>
+                    <li class="lable-title lable-title--top">业务咨询热线：130-7670-3796（李先生）</li>
+                    <li class="workday">周一至周五（9:00-18:00）</li>
+                </ul>
+                <ul class="float-left" style="padding-right:78px;">
+                    <li class="lable-title">地址：广州市天河区华夏路28号富力盈信大厦12楼艾客</li>
+                    <li class="lable-title lable-title--top">邮箱：info@aiagain.com</li>
+                </ul>
+                </div>
+            </div>
+            </div>
+        </div>
+        <!-- footer -->
+
+        <div class="layout-layer retail-footer del--footer">
             <div class="retail-footer__contact">
                 <p class="main-company del--maincompany">微管家是广州市喵鲜贸易有限公司旗下的一款产品</p>
                 <p>了解更多产品,请拨打：400-8320-166 邮箱：info@aiagain.com</p>
             </div>
         </div>
-        <div class="layout-layer wgjia-records retail-footer__records">Copyright ©2018<span id="host">www.wechatone.com</span> 版权所有 <a href="http://www.miitbeian.gov.cn" target="_blank">粤ICP备13082124号-2</a></div>
+        <div class="layout-layer wgjia-records retail-footer__records">Copyright ©2018<span id="host">www.wechatone.com</span> 版权所有 <a id="gov" href="http://www.miitbeian.gov.cn" target="_blank">粤ICP备13082124号-2</a></div>
         <div class="retail-buoy">
             <ul>
                 <li class="consultHover">
