--- a/production/register.html
+++ b/production/register.html
@@ -107,13 +107,36 @@
         <iframe id="main" name="main" frameborder="0" scrolling="no" src="http://www.aiagain.com/UserRegister/Main2"  width="100%" height="950px"></iframe>
       </div>
     </div>
-    <div class="layout-layer retail-footer">
-      <div class="retail-footer__contact">
-        <p class="main-company del--maincompany">微管家是广州市喵鲜贸易有限公司旗下的一款产品</p>
-        <p>了解更多产品,请拨打：400-8320-166    邮箱：info@aiagain.com</p>
+
+    <!-- footer -->
+    <div class="layout d-none add--footer">
+      <div class="footer-layout" id="footerId">
+        <div class="layer-container footer-container footer-container--sx clearfix">
+          <i class="icon icon-robot float-left"></i>
+          <div class="site float-left" style="width: 722px;height: 179px;">
+            <p class="lable-title pt-0">联系我们</p>
+            <ul class="float-left" style="padding-right: 8px;">
+              <li class="lable-title">客服咨询热线：400-832-0166</li>
+              <li class="lable-title lable-title--top">业务咨询热线：130-7670-3796（李先生）</li>
+              <li class="workday">周一至周五（9:00-18:00）</li>
+            </ul>
+            <ul class="float-left" style="padding-right:78px;">
+              <li class="lable-title">地址：广州市天河区华夏路28号富力盈信大厦12楼艾客</li>
+              <li class="lable-title lable-title--top">邮箱：info@aiagain.com</li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="layout-layer wgjia-records retail-footer__records">Copyright ©2018<span id="host">www.wechatone.com</span> 版权所有 <a href="http://www.miitbeian.gov.cn" target="_blank">粤ICP备13082124号-2</a></div>
+    <!-- footer -->
+    
+    <div class="layout-layer retail-footer del--footer">
+      <div class="retail-footer__contact">
+        <p class="main-company del--maincompany">微管家是广州市喵鲜贸易有限公司旗下的一款产品</p>
+        <p>了解更多产品,请拨打：400-8320-166 邮箱：info@aiagain.com</p>
+      </div>
+    </div>
+    <div class="layout-layer wgjia-records retail-footer__records">Copyright ©2018<span id="host">www.wechatone.com</span> 版权所有 <a id="gov" href="http://www.miitbeian.gov.cn" target="_blank">粤ICP备13082124号-2</a></div>
     <div class="retail-buoy">
       <ul>
         <li class="consultHover">
